--- a/forum/app/views/layouts/application.html.erb
+++ b/forum/app/views/layouts/application.html.erb
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forum</title>
+  <title>Forum Login</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <div id="nav">
+    <%= link_to "Register", new_user_path%>
+  </div>
 
 <%= yield %>
 
